--- a/style.css
+++ b/style.css
@@ -912,7 +912,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./location1/9-9.jpg");
+    url("./westgate-img/bsquare-westgate-img1.jpg");
   background-size: cover;
   background-position: top left;
 }
@@ -953,7 +953,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./location2/03.webp");
+    url("./s.g.road-img/s.g-road-img3.webp");
   background-size: cover;
   background-position: top left;
 }
@@ -977,7 +977,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./location4/01.webp");
+    url("./navrangpura-img/navrangpura-img1.jpg");
   background-size: cover;
   background-position: top left;
 }
@@ -989,7 +989,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./location5/16.jpg");
+    url("./sindhubhawan-img/sindhubhawan-img-16.jpg");
   background-size: cover;
   background-position: top left;
 }
@@ -1078,10 +1078,10 @@ a.current_dot {
 }
 
 @media screen and (max-width: 920px) {
-  header {
+  /* header {
     height: 70vh;
     position: relative;
-  }
+  } */
 
   .cs-down {
     display: none;
