--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./westgate-img/bsquare-westgate-img1.jpg");
+    url("./westgate-img/bsquare-westgate-img1.webp");
   background-size: cover;
   background-position: top left;
 }
@@ -954,7 +954,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./navrangpura-img/navrangpura-img1.jpg");
+    url("./navrangpura-img/navrangpura-img1.webp");
   background-size: cover;
   background-position: top left;
 }
@@ -966,7 +966,7 @@ ul {
       rgba(0, 0, 0, 0.573) 51%,
       rgba(1, 1, 1, 0.377) 100%
     ),
-    url("./sindhubhawan-img/sindhubhawan-img-16.jpg");
+    url("./sindhubhawan-img/sindhubhawan-img-16.webp");
   background-size: cover;
   background-position: top left;
 }
